# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  12 Aug 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Fix parsing of --config=... command line option

  27 Jul 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  genkernel:
  Bump version to 3.4.40

  24 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Flip awk return values.

  24 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Minor thinko in devpts check.

  24 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Prior commit to only mount devtmpfs and devpts if they were not already
  mounted made assumptions about the device names they were mounted as. Check
  the filesystem column of /proc/mounts instead.

  21 Jul 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.39

  17 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> arch/x86_64/kernel-config:
  Bug #399703: amd64 default kernel config did not have EFI support.
  
  15 July 2012; Robin H. Johnson <robbat2@gentoo.org> doc/genkernel.8.txt,
  Document the isoboot option, as designed for GRUB2 usage 3 years ago.

  09 Jul 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.38

  09 Jul 2012; Sebastian Pipping <sping@gentoo.org> gen_compile.sh:
  Fix linking of unionfs-fuse 0.24

  09 Jul 2012; Sebastian Pipping <sping@gentoo.org>
  patches/fuse/2.8.6/fuse-2.8.6-glibc-2.14.patch:
  Allow compilation of FUSE 2.8.6 with glibc 2.14 (bug #425080)

  09 Jul 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Restore previous handling of real_root due to report of regressions (bug
  #419965)

  08 Jul 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.37

  08 Jul 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh,
  genkernel: